--- a/curso_html/aula-02.html
+++ b/curso_html/aula-02.html
@@ -8,7 +8,7 @@
         <meta name="description" content="DESCRIÇÂO AULA 2">
         <meta name="keywords" content="marketplace , vendas, compras">
         <link rel="stylesheet" href="aula-02.css">
-        <script src="aula-02.js"></script>/script>
+        <script src="/Desvendando a web HTML, CSS, Javascript e Typescript [2023]/curso_javascript/aula-02.js"></script>/script>
         <link rel="icon" href="https://github.githubassets.com/favicons/favicon.png">
     </head>
     <body>
