--- a/curso_html/aula-03.html
+++ b/curso_html/aula-03.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="aula-03.css">
+        <link rel="stylesheet" href="/Desvendando a web HTML, CSS, Javascript e Typescript [2023]/curso_css/aula-03.css">
     </head>
     <body>
         <h1>Peito e tricéps</h1>
