--- a/curso_html/aula-04.html
+++ b/curso_html/aula-04.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="aula-04.css">
+        <link rel="stylesheet" href="/Desvendando a web HTML, CSS, Javascript e Typescript [2023]/curso_css/aula-04.css">
     </head>
     <body>
         <ul>
