--- a/curso_html/aula-14.html
+++ b/curso_html/aula-14.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="aula-14.css">
+        <link rel="stylesheet" href="/Desvendando a web HTML, CSS, Javascript e Typescript [2023]/curso_css/aula-14.css">
     </head>
     <body>
         <div class="menu-left">TEXT 1</div>
