--- a/curso_html/aula-16.html
+++ b/curso_html/aula-16.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-         <link rel="stylesheet" href="aula-16.css">
+         <link rel="stylesheet" href="/Desvendando a web HTML, CSS, Javascript e Typescript [2023]/curso_css/aula-16.css">
     </head>
     <body>
            <div class="container row">
