--- a/curso_html/aula-17.html
+++ b/curso_html/aula-17.html
@@ -1,17 +1,40 @@
 <html>
     <head>
-        <link rel="stylesheet" href="aula-17.css">
+        <link rel="stylesheet" href="/Desvendando a web HTML, CSS, Javascript e Typescript [2023]/curso_css/aula-17.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container flex-no-wrap">
             <div class="item">
-                TextoSemEspaçoParaTest
+                TextoSemEspacoParaTeste
+            </div>
+            <div class="item">
+                TextoSemEspacoParaTeste
+            </div>
+            <div class="item">
+                TextoSemEspacoParaTeste
+            </div>
         </div>
-        <div class="item">
-            TextoSemEspaçoParaTest
+        <div class="container flex-wrap">
+            <div class="item">
+                TextoSemEspacoParaTeste
+            </div>
+            <div class="item">
+                TextoSemEspacoParaTeste
+            </div>
+            <div class="item">
+                TextoSemEspacoParaTeste
+            </div>
         </div>
-        <div class="item">
-        TextoSemEspaçoParaTest
+        <div class="container flex-wrap-reverse">
+            <div class="item">
+                TextoSemEspacoParaTeste
+            </div>
+            <div class="item">
+                TextoSemEspacoParaTeste
+            </div>
+            <div class="item">
+                TextoSemEspacoParaTeste
+            </div>
         </div>
     </body>
 </html>
